# zord

./: LICENSE  Makefile  README.md  default.toml
app/: Cargo.toml  Dioxus.toml  config.toml
app/public/: main.css
app/src/: main.rs  structs.rs  util_components.rs  utils.rs
config/: .gitignore  Cargo.toml
config/src/: lib.rs  macros.rs  structs.rs  test.rs  traits.rs
fs/: Cargo.toml
fs/src/: lib.rs  macros.rs  structs.rs  test.rs  traits.rs  utils.rs
