[package]
name = "app"
version = "0.1.0"
authors = ["bryxosmmm <bryxosmmm@proton.me>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = [] }
config = { path = "../config" }
fs = { path = "../fs" }
anyhow = "1.0.97"
nucleo-matcher = "0.3.1"
rayon = "1.10.0"

[features]
default = ["desktop"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
